[package]
name = "track-cli"
version = "0.1.0"
authors = ["Jethro Kuan <jethrokuan95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.2"
dirs = "3.0"
chrono = "0.4.19"
error-chain = "0.12.4"
regex = "1"
lazy_static = "1.4.0"
itertools = "0.9.0"
ansi_term = "0.12.1"
telegram-bot = "0.7"
tokio = { version = "0.2", features = ["full"] }
