[package]
name = "track"
version = "0.1.0"
authors = ["Jethro Kuan <jethrokuan95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.2"
dirs = "3.0"
chrono = "0.4.19"
anyhow = "1.0.33"
regex = "1"
lazy_static = "1.4.0"
itertools = "0.9.0"
telegram-bot = "0.7"
tokio = { version = "0.2", features = ["full"] }
structopt = "0.3"
